<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <include layout="@layout/layout_tool_bar_main_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:scaleType="centerInside"
                android:src="@drawable/running_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="@string/running"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="@string/activity"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:scaleType="centerInside"
                android:src="@drawable/roaddistance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="35.5 KMS"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="Distance [KM]"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:scaleType="centerInside"
                android:src="@drawable/members_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="1777"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="Members"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvJoinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/background_border_sky_blue_with_blue_background_rounded"
        android:fontFamily="@font/bebasneue_regular"
        android:letterSpacing="1"
        android:padding="@dimen/dp_8"
        android:text="+ Join"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/tvChallengesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/background_border_sky_blue_with_blue_background_rounded"
        android:fontFamily="@font/bebasneue_regular"
        android:letterSpacing="1"
        android:padding="@dimen/dp_8"
        android:text="@string/challenges"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_20"
        android:fontFamily="@font/din_alter_nate_bold"
        android:letterSpacing="1"
        android:padding="@dimen/dp_8"
        android:text="@string/lorem_sample_text"
        android:textAlignment="center"
        android:textColor="@color/bottom_gray"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic"
        />

</LinearLayout>
</layout>