<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appiconacttwo"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:scaleType="centerInside"
                android:src="@drawable/running_gray" />

            <TextView
                android:id="@+id/running"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="@string/running"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:visibility="gone"
                android:id="@+id/activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="@string/activity"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appiconactivity"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:scaleType="centerInside"
                android:src="@drawable/roaddistance" />

            <TextView

                android:id="@+id/kilometerr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="35.5 KMS"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="Distance [KM]"
                android:visibility="gone"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/membersall"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:scaleType="centerInside"
                android:src="@drawable/members_user" />

            <TextView
                android:id="@+id/members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="1777"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:visibility="gone"
                android:id="@+id/memberstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebase_font_family_regular"
                android:text="Members"
                android:textAllCaps="true"
                android:textColor="@color/black_btn"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_20"
        android:fontFamily="@font/din_alternate_bold"
        android:padding="@dimen/dp_8"
        android:text="@string/lorem_sample_text"
        android:textAlignment="center"
        android:textColor="@color/black_btn"
        android:textSize="@dimen/sp_14"
        android:textStyle="normal" />


</LinearLayout>